# AI-Agentic-OS

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD-JOURNAL.md  BUILD.md  CLAUDE.md  Cargo.toml  DESIGN.md  FEATURES-50.md  HEARTBEAT.md  MARKET-RISKS.md  MASTERPLAN.md  MODEL-PLAN.md  PLAN-FORWARD.md  README.md  REVIEW.md  ROADMAP.md  SELF-TEST.md  STRATEGY.md  TEST-GUIDE.md  TESTING.md  TRAINING.md  mcp.json.example
.github/workflows/: release.yml  test.yml
docs/: SPIKE-1-RESULT.md
examples/: streaming.rs
scripts/: requirements-train.txt  train_lora.py
skills/: outreach-writer.md
src/: activity.rs  ann.rs  coder.rs  crypto.rs  dataset.rs  embeddings.rs  fswatch.rs  hearing.rs  hotkey.rs  main.rs  mcp.rs  memory.rs  policy.rs  proactivity.rs  provider.rs  server.rs  tools.rs  watch.rs
