[package]
name = "jarvis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
dotenvy = "0.15.7"
enigo = "0.6.1"
futures-util = "0.3.32"
hf-hub = { version = "0.5.0", features = ["tokio"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls", "stream"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xcap = "0.9.6"

# Release builds: optimize for speed + size, strip symbols. The result is a
# single self-contained executable per OS (SQLite + TLS are compiled in).
[profile.release]
opt-level = 3
lto = true        # link-time optimization: smaller, faster binary
strip = true      # remove debug symbols (much smaller file)
codegen-units = 1 # better optimization at the cost of slower compile
