[package]
name = "jarvis"
version = "0.1.0"
edition = "2024"

[dependencies]
active-win-pos-rs = "0.11.0"
aes-gcm = "0.10"
anyhow = "1.0.102"
arboard = "3.6.1"
sysinfo = "0.32"
instant-distance = "0.6"
notify = "6.1"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
chrono = "0.4"
dirs = "6.0.0"
dotenvy = "0.15.7"
enigo = "0.6.1"
futures-util = "0.3.32"
headless_chrome = "1.0.22"
hf-hub = { version = "0.5.0", features = ["tokio"] }
pdf-extract = "0.7"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls", "stream", "multipart"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xcap = "0.9.6"

# Windows UI Automation: lets us click real UI elements by name (accessibility
# tree) instead of guessing pixel coordinates - the key to reliable computer-use.
# wasapi: WASAPI loopback capture of system audio (what's playing through the
# speakers) - the "ears" for live video watch-along. Both are Windows-only and
# gated here so macOS/Linux still build clean.
[target.'cfg(windows)'.dependencies]
uiautomation = "0.16"
wasapi = "0.23"
# global summon hotkey (RegisterHotKey + message loop); version matches the copy
# already pulled in transitively so we don't add a second `windows` build.
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

# Release builds: optimized + self-contained, but NOT max-LTO (that made builds
# take ~7 min). "thin" LTO is ~as fast at runtime and links much quicker.
[profile.release]
opt-level = 3
lto = "thin"
strip = true
# (no codegen-units=1 — let cargo parallelize for faster builds)

# THE FAST-ITERATION TRICK: compile DEPENDENCIES optimized even in debug builds,
# while your own code stays a quick debug compile. Result: `cargo run` (debug)
# builds in seconds AND candle/embeddings run fast. The first build after this
# change recompiles deps once (slow), then every build is fast.
[profile.dev.package."*"]
opt-level = 3
